dfir_rs/tests/compile-fail-stable/surface_loop_multiple_window.rs
../compile-fail/surface_loop_multiple_window.rs